<resources>
    <string name="app_name">Stock Order</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="loginButton">Login</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="notification_message">FCM Message</string>
    <string name="default_notification_channel_name">Channel name %s</string>
    <string name="background_image">Background image</string>
    <string name="devFlavorText">DEVELOPMENT</string>
    <string name="testFlavorText">TEST</string>
    <string name="appVersion">App version:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_orders">Orders</string>
    <string name="button_view_orders">View Orders</string>
    <string name="button_send_orders">Send Orders</string>
    <string name="button_settings">Settings</string>
    <string name="button_logout">Logout</string>
    <string name="please_select_an_option">Select an option</string>
    <string name="select_a_delivery_address">Select a delivery address</string>
    // Fragment titles
    <string name="delivery_address_title">Delivery address</string>
    <string name="go_back_to_options">Go back to option selections</string>
    <string name="order_date_text">Order date</string>
    <string name="showSettings">saved_pref_show_settings</string>
    <string name="welcome_text">Welcome</string>
    <string name="overflow_menu_text">Overflow menu</string>
    <string name="elis_logo_bottom">Bottom of page Elis logo</string>
    <string name="elis_page_background">Page background</string>
    <string name="pos_group_title">Point of service group</string>
    <string name="pos_title">Point of service</string>
    <string name="article_entry_title">Order entry</string>
    <string name="order_selection_title">Orders</string>
    <string name="article_title">Article entry</string>
    <string name="send_order_delivery_address">Send order</string>
    <string name="send_order_order_screen">Send order</string>


    // Shared prefs
    <string name="session_shared_prefs">Session Shared Preferences</string>
    <string name="session_key">Session Key</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="data_loading_icon">data_loading_icon</string>
    <string name="please_select_a_point_of_service_group">Select a Point of service group</string>
    <string name="please_select_a_point_of_service">Select a point of service</string>
    <string name="delivery_address_text">Delivery address</string>
    <string name="point_of_service_text">Point of service</string>
    <string name="enter_counted_qty">Enter counted qty</string>
    <string name="ordering_group_text">Ordering Group</string>
    <string name="pos_text">Point of Service</string>
    <string name="proceed_button_icon">Proceed button icon</string>
    <string name="delivery_address_icon">Delivery address building icon</string>
    <string name="please_select_an_order">Select an order</string>
    <string name="pos_order_text">Point of Service</string>
    <string name="date_selection_button">Choose date</string>
    <string name="Enter_Counted_Qty">Enter counted qty</string>
    <string name="this_is_the_counted_qty_field">This is the counted qty field.</string>
    <string name="target_qty_text">Target Qty\n</string>
    <string name="order_qty_text">Order Qty</string>
    <string name="enter_county_qty_hint">Qty</string>
    <string name="article_entry_of">of</string>
    <string name="article_entry_last_article_text">You are entering the last article</string>
    <string name="article_entry_article_position_text">Entering Article</string>
    <string name="article_entry_counted_qty_speakable">Counted qty field</string>
    <string name="article_entry_send_order_button">Send order</string>
    <string name="please_select_an_order_to_send">Select an order to send</string>
    <string name="submit_order_text">Submit order</string>
    <string name="proceed_arrow">Proceed</string>
    <string name="article_entry_total_articles_divider">/</string>
    <string name="home_button">Home button</string>
    <string name="overflow_menu_button">Overflow menu</string>
    <string name="device_info_error">Error</string>
    <string name="app_header_name">App header</string>
    <string name="status_icon_new">Status new</string>
    <string name="article_cardview_qty">Qty</string>
    <string name="device_info">Device info</string>
    <string name="total_articles">Total articles:</string>
    <string name="delivery_date_text">Delivery date:</string>
    <string name="connection_status">Connection status</string>


</resources>