<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OrderFragment"
    android:orientation="vertical">
    <data>
        <variable
            name="sharedViewModel"
            type="com.elis.orderingapplication.viewModels.ParamsViewModel" />
        <variable
            name="orderViewModel"
            type="com.elis.orderingapplication.viewModels.OrderViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/elis_page_background"
            android:scaleType="centerCrop"
            android:src="@drawable/new_applogin_design_background_no_logo_01" />


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/elis_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="@string/go_back_to_options"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            style="@style/overflowMenuColour"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.09" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.94" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/instruction_background"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline2">

                <TextView
                    android:id="@+id/deliveryAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/sharpsans_medium"
                    android:text="@{sharedViewModel.deliveryAddressName}"
                    android:textFontWeight="800"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deliveryAddressText" />

                <TextView
                    android:id="@+id/deliveryAddressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/delivery_address_text"
                    android:textAlignment="center"
                    android:textColor="@color/elis_blue"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/orderingGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/sharpsans_medium"
                    android:text="@{sharedViewModel.orderingGroupName}"
                    android:textFontWeight="800"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/orderingGroupText" />

                <TextView
                    android:id="@+id/orderingGroupText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/pos_order_text"
                    android:textAlignment="center"
                    android:textColor="@color/elis_blue"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/deliveryAddress" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/selectAnOption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/instruction_background"
                android:fontFamily="@font/sharpsans_medium"
                android:letterSpacing=".1"
                android:maxLines="1"
                android:text="@string/please_select_an_order"
                android:textAlignment="center"
                android:textColor="@color/elis_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/selectAnOption">

                <Button
                    android:id="@+id/choose_date_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/elis_black"
                    android:text="@string/date_selection_button"
                    app:icon="@drawable/baseline_calendar_month_24"
                    app:iconGravity="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/white"
                    app:strokeWidth="0.5dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/order_selection"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:paddingTop="5dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/choose_date_button"
                    app:spanCount="1"
                    tools:listitem="@layout/order_cardview">

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.03"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.97" />

            <ImageView
                android:id="@+id/small_elis_logo"
                android:layout_width="69dp"
                android:layout_height="44dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/elis_logo_bottom"
                android:src="@drawable/elis_logo_white_circular_services_01"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/overflow_menu2"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/overflow_menu_text"
                android:paddingTop="1dp"
                android:paddingEnd="1dp"
                android:layout_marginTop="8dp"
                android:translationZ="90dp"
                app:icon="@drawable/ic_more_vert"
                app:iconGravity="start|end"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_vertical"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>