<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ArticleFragment"
    android:orientation="vertical">
    <data>
        <variable
            name="orderData"
            type="com.elis.orderingapplication.pojo2.OrderParcelable" />
        <variable
            name="orderDateVal"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/elis_page_background"
            android:scaleType="centerCrop"
            android:src="@drawable/new_applogin_design_background_no_logo_01" />


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/overflowMenuColour"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/elis_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="@string/go_back_to_options"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.09" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.96" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/instruction_background_v3"
                android:elevation="2dp"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline2">

                <TextView
                    android:id="@+id/orderDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:focusable="false"
                    android:fontFamily="@font/gothic_a1_medium"
                    android:text="@string/order_date_text"
                    android:textAlignment="center"
                    android:textColor="@color/elis_blue"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/orderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:focusable="false"
                    android:fontFamily="@font/gothic_a1_bold"
                    android:text="@{orderDateVal}"
                    android:textFontWeight="800"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/orderDateText" />

                <TextView
                    android:id="@+id/deliveryAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:focusable="false"
                    android:fontFamily="@font/gothic_a1_bold"
                    android:text="@{orderData.deliveryAddressName}"
                    android:textFontWeight="800"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deliveryAddressText" />

                <TextView
                    android:id="@+id/deliveryAddressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:focusable="false"
                    android:fontFamily="@font/gothic_a1_medium"
                    android:text="@string/delivery_address_text"
                    android:textAlignment="center"
                    android:textColor="@color/elis_blue"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/orderDate" />

                <TextView
                    android:id="@+id/orderingGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:focusable="false"
                    android:fontFamily="@font/gothic_a1_bold"
                    android:text="@{orderData.posName}"
                    android:textFontWeight="800"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/orderingGroupText" />

                <TextView
                    android:id="@+id/orderingGroupText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:focusable="false"
                    android:fontFamily="@font/gothic_a1_medium"
                    android:text="@string/pos_text"
                    android:textAlignment="center"
                    android:textColor="@color/elis_blue"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/deliveryAddress" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/article_entry_viewpager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:focusable="false"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            </androidx.viewpager2.widget.ViewPager2>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/send_order_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:text="@string/submit_order_text"
                android:textColor="@color/white"
                android:visibility="gone"
                app:backgroundTint="#4CAF50"
                app:icon="@drawable/baseline_send_24"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.02" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.975" />

            <ImageView
                android:id="@+id/small_elis_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/elis_logo_bottom"
                android:focusable="false"
                android:src="@drawable/elis_logo_white_circular_services_01"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/overflow_menu2"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/overflow_menu_text"
                android:focusable="false"
                android:gravity="center_vertical"
                android:paddingTop="1dp"
                android:paddingEnd="1dp"
                android:translationZ="90dp"
                app:icon="@drawable/ic_more_vert"
                app:iconGravity="start|end"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/debug_banner"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="-40dp"
            android:layout_marginTop="30dp"
            android:background="#AA000000"
            android:orientation="vertical"
            android:padding="8dp"
            android:rotation="-45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/banner_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="300dp"
            android:visibility="gone"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="232dp"
            android:contentDescription="@string/data_loading_icon"
            android:indeterminateDrawable="@drawable/elis_loading_icon_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>